--- a/NONO.css
+++ b/NONO.css
@@ -57,6 +57,7 @@ body {
     /*text-align: center;*/
     /*font-weight: bold;*/
     /*font-style: italic;*/
+    background-repeat: no-repeat;
     width: 100%;
     display: inline-block;
     text-align: left;
@@ -101,8 +102,8 @@ ul.a1-nav li a {
     text-decoration: none;
 }
 ul.a1-nav li a:hover {
-    background-color: #ccc;
-    color: white;
+    /*background-color: #ccc;*/
+    color: #ccc;
 }
 
 /* override nav tab color when tab selected */
