--- a/NONO.css
+++ b/NONO.css
@@ -23,7 +23,7 @@ body {
 }
 
 #outer_wrapper {
-    line-height: 0;
+    /*line-height: 1;*/
     background: white;
     width: 960px;
     margin: 0 auto;
@@ -34,7 +34,7 @@ body {
     width: 960px;
     /* change if want to do left sidebar */
     margin: 0;
-    padding: 0 0 0px 0;
+    padding: 0 0 10px 0;
     overflow: auto;
     /* banner links to venue's main site */
 }
@@ -46,7 +46,7 @@ body {
 #header {
     /*font-family: 'EB Garamond', serif;*/
     /* to include a site logo, use 'background-image:' here */
-    height: 200px;
+    height: 250px;
     background-image: url("NONObanner.png");
     background-size: contain;
     background-position: center center;
@@ -54,7 +54,7 @@ body {
     /*color: #121313;*/
     /*background-color: #fff;*/
     /*text-shadow: 2px 2px #a89720;*/
-    padding: 0em 0em;
+    padding: 0.5em 1em;
     /*text-align: center;*/
     /*font-weight: bold;*/
     /*font-style: italic;*/
@@ -65,12 +65,12 @@ body {
 }
 
 #content {
-    padding: 0 2px;
+    padding: 0 4px;
 }
 
 #footer {
     margin: 0;
-    padding: 2px;
+    padding: 20px;
     color: white;
 }
 #footer a {
