change header padding

--- a/NONO.css
+++ b/NONO.css
@@ -54,7 +54,7 @@ body {
     /*color: #121313;*/
     /*background-color: #fff;*/
     /*text-shadow: 2px 2px #a89720;*/
-    padding: 0.5em 1em;
+    padding: 0px;
     /*text-align: center;*/
     /*font-weight: bold;*/
     /*font-style: italic;*/
