--- a/NONO.css
+++ b/NONO.css
@@ -17,7 +17,7 @@
 html {
     font-size: 11pt;
     /*font-family: Helvetica, Arial, sans-serif;*/
-    font-family: 'Montserrat', sans-serif
+    font-family: 'Montserrat', sans-serif; 
     color: #121313;
 }
 body {
