main image change

--- a/NONO.css
+++ b/NONO.css
@@ -49,7 +49,7 @@ body {
     /*font-family: 'EB Garamond', serif;*/
     /* to include a site logo, use 'background-image:' here */
     height: 150px;
-    background-image: url("NONObanner.png");
+    background-image: url("NONOmain.png");
     background-size: contain;
     background-position: center center;
     /*font-size: 400%;*/
