--- a/NONO.css
+++ b/NONO.css
@@ -56,7 +56,7 @@ body {
     /*color: #121313;*/
     /*background-color: #fff;*/
     /*text-shadow: 2px 2px #a89720;*/
-    padding: 16px 0px 0px 0px;
+    padding: 16px 0px 0px 20px;
     /*text-align: center;*/
     /*font-weight: bold;*/
     /*font-style: italic;*/
@@ -66,8 +66,12 @@ body {
     text-align: left;
 }
 
+#store {
+  padding: 20px
+}
+
 #content {
-    padding: 0 4px;
+    padding: 20px;
 }
 
 #footer {
@@ -120,7 +124,7 @@ p.py-4{
 }
 
 #regularShow_BannerNonSubscriber.storeBanner {
-  padding 20px; 
+  padding 20px;
 }
 
 /* override nav tab color when tab selected */
