getting rid of promo code button

--- a/NONO.css
+++ b/NONO.css
@@ -124,6 +124,10 @@ p.py-4{
   padding: 20px;
 }
 
+#enter_promo_code {
+  display: none; 
+}
+
 /* override nav tab color when tab selected */
 body#store_index li#t_store_index a,
 body#customers_welcome li#t_customers_welcome a,
