changed padding for the shows

--- a/NONO.css
+++ b/NONO.css
@@ -121,7 +121,7 @@ p.py-4{
 }
 
 #regularShow_BannerNonSubscriber.storeBanner {
-  padding: 20px;
+  padding: 20px 20px 56px 20px;
 }
 
 #enter_promo_code {
