--- a/NONO.css
+++ b/NONO.css
@@ -136,6 +136,10 @@ p.py-4{
   padding: 20px
 }
 
+body#store_checkout  div#someone_else  {
+   display: none;
+}
+
 /* override nav tab color when tab selected */
 body#store_index li#t_store_index a,
 body#customers_welcome li#t_customers_welcome a,
