put back promo code

--- a/NONO.css
+++ b/NONO.css
@@ -124,9 +124,9 @@ p.py-4{
   padding: 20px 20px 56px 20px;
 }
 
-#enter_promo_code {
+/*#enter_promo_code {
   display: none;
-}
+}*/
 
 #show_description.explanation {
   padding: 20px
